コメント機能の実装

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,26 @@
 
 <%= render @post %>
 
+<h2>コメント</h2>
+<%= form_with(model: [ @post, Comment.new ], local: true) do |form| %>
+  <div class="field">
+    <%= form.label :content %>
+    <%= form.text_area :content %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit "コメントを投稿" %>
+  </div>
+<% end %>
+
+<% @post.comments.each do |comment| %>
+  <p>
+    <strong><%= comment.user.email %>:</strong>
+    <%= comment.content %>
+  </p>
+<% end %>
+
+
 <div>
   <%= link_to "Edit this post", edit_post_path(@post) %> |
   <%= link_to "Back to posts", posts_path %>
